--- a/.github/workflows/139-16-ubuntu-banish-level8-no-gloss.yml
+++ b/.github/workflows/139-16-ubuntu-banish-level8-no-gloss.yml
@@ -1,9 +1,7 @@
 name: 139-16 Ubuntu banish level 8 no-gloss repro
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
