--- a/.github/workflows/139-26-ubuntu-parse-banish-level8.yml
+++ b/.github/workflows/139-26-ubuntu-parse-banish-level8.yml
@@ -1,7 +1,9 @@
-name: 139-17 Ubuntu test-magic only repro
+name: 139-26 Ubuntu parse banish level 8 repro
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,8 +13,8 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-test-magic-only:
-    name: Ubuntu test-magic only repro
+  ubuntu-parse-banish-level8:
+    name: Ubuntu parse banish level 8 repro
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
@@ -34,23 +36,23 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run test-magic without banish (capture segfault)
+      - name: Run banish via parse command path
         run: |
           set +e
           ulimit -c unlimited || true
           . spells/.imps/sys/invoke-wizardry
           if command -v timeout >/dev/null 2>&1; then
-            timeout 300 ./spells/.wizardry/test-magic --verbose
+            timeout 300 parse banish 8 --only --no-tests --no-heal
             status=$?
           else
-            ./spells/.wizardry/test-magic --verbose
+            parse banish 8 --only --no-tests --no-heal
             status=$?
           fi
           if [ "$status" -eq 139 ]; then
-            printf '%s\n' "test-magic exited with code 139 (SIGSEGV)"
+            printf '%s\n' "parse banish exited with code 139 (SIGSEGV)"
             printf '%s\n' "Last 50 dmesg lines (if available):"
             dmesg | tail -n 50 || true
           elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "test-magic timed out after 300 seconds"
+            printf '%s\n' "parse banish timed out after 300 seconds"
           fi
           exit "$status"
