--- a/.github/workflows/139-27-ubuntu-manual-gloss-banish-level8.yml
+++ b/.github/workflows/139-27-ubuntu-manual-gloss-banish-level8.yml
@@ -1,7 +1,9 @@
-name: 139-17 Ubuntu test-magic only repro
+name: 139-27 Ubuntu manual gloss banish level 8 repro
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,12 +13,12 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-test-magic-only:
-    name: Ubuntu test-magic only repro
+  ubuntu-manual-gloss-banish-level8:
+    name: Ubuntu manual gloss banish level 8 repro
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
-      WIZARDRY_GLOSSES: "1"
+      WIZARDRY_GLOSSES: "0"
       WIZARDRY_DEBUG: "1"
     steps:
       - name: Checkout
@@ -34,23 +36,30 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run test-magic without banish (capture segfault)
+      - name: Generate and source glosses, then banish level 8
         run: |
           set +e
           ulimit -c unlimited || true
           . spells/.imps/sys/invoke-wizardry
+          gloss_file=$(mktemp "${TMPDIR:-/tmp}/wizardry-glosses.XXXXXX") || exit 1
+          if generate-glosses --quiet --output "$gloss_file"; then
+            . "$gloss_file"
+          else
+            printf '%s\n' "generate-glosses failed"
+          fi
           if command -v timeout >/dev/null 2>&1; then
-            timeout 300 ./spells/.wizardry/test-magic --verbose
+            timeout 300 banish 8 --only --no-tests --no-heal
             status=$?
           else
-            ./spells/.wizardry/test-magic --verbose
+            banish 8 --only --no-tests --no-heal
             status=$?
           fi
+          rm -f "$gloss_file"
           if [ "$status" -eq 139 ]; then
-            printf '%s\n' "test-magic exited with code 139 (SIGSEGV)"
+            printf '%s\n' "banish exited with code 139 (SIGSEGV)"
             printf '%s\n' "Last 50 dmesg lines (if available):"
             dmesg | tail -n 50 || true
           elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "test-magic timed out after 300 seconds"
+            printf '%s\n' "banish timed out after 300 seconds"
           fi
           exit "$status"
