--- a/.github/workflows/139-64-ubuntu-glosses-source-only.yml
+++ b/.github/workflows/139-64-ubuntu-glosses-source-only.yml
@@ -1,9 +1,7 @@
 name: 139-64 Ubuntu glosses source only
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
