--- a/.github/workflows/139-67-ubuntu-gloss-per-gloss.yml
+++ b/.github/workflows/139-67-ubuntu-gloss-per-gloss.yml
@@ -40,43 +40,43 @@ jobs:
         run: |
           set +e
           ulimit -c unlimited || true
-          bash -lc '
+          bash -lc "
             set -e
             . spells/.imps/sys/invoke-wizardry
-            gloss_dir=$(mktemp -d /tmp/wizardry-gloss-blocks.XXXXXX)
-            gloss_file=$(mktemp /tmp/wizardry-gloss.XXXXXX)
-            generate-glosses --output "$gloss_file"
+            gloss_dir=\$(mktemp -d /tmp/wizardry-gloss-blocks.XXXXXX)
+            gloss_file=\$(mktemp /tmp/wizardry-gloss.XXXXXX)
+            generate-glosses --output \"\$gloss_file\"
 
-            awk_script=$(mktemp /tmp/wizardry-gloss-split.XXXXXX)
-            printf '%s\n' \
-              'BEGIN { idx=0; out="" }' \
-              '/^# First-word gloss/ {' \
-              '  idx++' \
-              '  out=sprintf("%s/block-%03d.sh", outdir, idx)' \
-              '  print "# block " idx > out' \
-              '}' \
-              '{ if (out != "") print >> out }' \
-              'END { printf "%d\\n", idx > outdir "/count" }' \
-              >"$awk_script"
-            awk -v outdir="$gloss_dir" -f "$awk_script" "$gloss_file"
-            rm -f "$awk_script"
+            awk_script=\$(mktemp /tmp/wizardry-gloss-split.XXXXXX)
+            cat >\"\$awk_script\" <<'AWK'
+BEGIN { idx=0; out="" }
+/^# First-word gloss/ {
+  idx++
+  out=sprintf("%s/block-%03d.sh", outdir, idx)
+  print "# block " idx > out
+}
+{ if (out != "") print >> out }
+END { printf "%d\n", idx > outdir "/count" }
+AWK
+            awk -v outdir=\"\$gloss_dir\" -f \"\$awk_script\" \"\$gloss_file\"
+            rm -f \"\$awk_script\"
 
-            total=$(cat "$gloss_dir/count")
-            printf "%s\n" "[gloss-test] total gloss blocks: $total"
+            total=\$(cat \"\$gloss_dir/count\")
+            printf \"%s\n\" \"[gloss-test] total gloss blocks: \$total\"
 
             i=1
-            while [ "$i" -le "$total" ]; do
-              block="$gloss_dir/block-$(printf "%03d" "$i").sh"
-              if [ ! -s "$block" ]; then
-                printf "%s\n" "[gloss-test] missing block $i"
+            while [ \"\$i\" -le \"\$total\" ]; do
+              block=\"\$gloss_dir/block-\$(printf \"%03d\" \"\$i\").sh\"
+              if [ ! -s \"\$block\" ]; then
+                printf \"%s\n\" \"[gloss-test] missing block \$i\"
                 exit 1
               fi
-              printf "%s\n" "[gloss-test] sourcing block $i"
-              . "$block"
+              printf \"%s\n\" \"[gloss-test] sourcing block \$i\"
+              . \"\$block\"
               banish 8 --only --no-tests --no-heal
-              i=$((i + 1))
+              i=\$((i + 1))
             done
-          '
+          "
           status=$?
           if [ "$status" -eq 139 ]; then
             printf '%s\n' "subshell banish exited with code 139 (SIGSEGV)"
