Add block-36 focused workflows and disable older tests

--- a/.github/workflows/139-76-ubuntu-gloss-bucket-3.yml
+++ b/.github/workflows/139-76-ubuntu-gloss-bucket-3.yml
@@ -2,6 +2,7 @@ name: 139-76 Ubuntu gloss bucket 3 per-gloss banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
