--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,40 +69,14 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-74 Ubuntu gloss bucket 1 per-gloss banish"
-            "139-75 Ubuntu gloss bucket 2 per-gloss banish"
-            "139-76 Ubuntu gloss bucket 3 per-gloss banish"
-            "139-77 Ubuntu gloss bucket 4 per-gloss banish"
-            "139-78 Ubuntu gloss bucket 5 per-gloss banish"
-            "139-79 Ubuntu gloss bucket 6 per-gloss banish"
-            "139-80 Ubuntu gloss bucket 7 per-gloss banish"
-            "139-81 Ubuntu gloss bucket 8 per-gloss banish"
-            "139-82 Ubuntu gloss bucket 9 per-gloss banish"
-            "139-83 Ubuntu gloss bucket 10 per-gloss banish"
-            "139-84 Ubuntu gloss bucket 11 per-gloss banish"
-            "139-85 Ubuntu gloss bucket 12 per-gloss banish"
-            "139-86 Ubuntu gloss bucket 13 per-gloss banish"
-            "139-87 Ubuntu gloss bucket 14 per-gloss banish"
-            "139-88 Ubuntu gloss bucket 15 per-gloss banish"
-            "139-89 Ubuntu gloss bucket 16 per-gloss banish"
-            "139-90 Ubuntu gloss bucket 17 per-gloss banish"
-            "139-91 Ubuntu gloss bucket 18 per-gloss banish"
-            "139-92 Ubuntu gloss bucket 19 per-gloss banish"
-            "139-93 Ubuntu gloss bucket 20 per-gloss banish"
-            "139-94 Ubuntu gloss bucket 21 per-gloss banish"
-            "139-95 Ubuntu gloss bucket 22 per-gloss banish"
-            "139-96 Ubuntu gloss bucket 23 per-gloss banish"
-            "139-97 Ubuntu gloss bucket 24 per-gloss banish"
-            "139-98 Ubuntu gloss bucket 25 per-gloss banish"
-            "139-99 Ubuntu gloss block 33 banish"
-            "139-100 Ubuntu gloss block 34 banish"
-            "139-101 Ubuntu gloss block 35 banish"
-            "139-102 Ubuntu gloss block 36 banish"
-            "139-103 Ubuntu gloss block 37 banish"
-            "139-104 Ubuntu gloss block 38 banish"
-            "139-105 Ubuntu gloss block 39 banish"
-            "139-106 Ubuntu gloss block 40 banish"
-            "139-107 Ubuntu gloss block 41 banish"
+            "139-108 Ubuntu Dump block 36 and run banish"
+            "139-109 Ubuntu Source block 36 only"
+            "139-110 Ubuntu Source block 36 and run banish twice"
+            "139-111 Ubuntu Banish before and after sourcing block 36"
+            "139-112 Ubuntu Source block 36 and capture defined function"
+            "139-113 Ubuntu Source blocks 35 then 36 and run banish"
+            "139-114 Ubuntu Source blocks 36 then 37 and run banish"
+            "139-115 Ubuntu Source block 36 in a nested subshell then banish"
           )
           
           # Total number of workflows we're monitoring
