--- a/.github/workflows/139-100-ubuntu-gloss-block-34.yml
+++ b/.github/workflows/139-100-ubuntu-gloss-block-34.yml
@@ -2,6 +2,7 @@ name: 139-100 Ubuntu gloss block 34 banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
