--- a/.github/workflows/139-101-ubuntu-gloss-block-35.yml
+++ b/.github/workflows/139-101-ubuntu-gloss-block-35.yml
@@ -2,6 +2,7 @@ name: 139-101 Ubuntu gloss block 35 banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
