--- a/.github/workflows/139-103-ubuntu-gloss-block-37.yml
+++ b/.github/workflows/139-103-ubuntu-gloss-block-37.yml
@@ -2,6 +2,7 @@ name: 139-103 Ubuntu gloss block 37 banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
