--- a/.github/workflows/139-104-ubuntu-gloss-block-38.yml
+++ b/.github/workflows/139-104-ubuntu-gloss-block-38.yml
@@ -2,6 +2,7 @@ name: 139-104 Ubuntu gloss block 38 banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
