--- a/.github/workflows/139-105-ubuntu-gloss-block-39.yml
+++ b/.github/workflows/139-105-ubuntu-gloss-block-39.yml
@@ -2,6 +2,7 @@ name: 139-105 Ubuntu gloss block 39 banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
