--- a/.github/workflows/139-106-ubuntu-gloss-block-40.yml
+++ b/.github/workflows/139-106-ubuntu-gloss-block-40.yml
@@ -2,6 +2,7 @@ name: 139-106 Ubuntu gloss block 40 banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
