--- a/.github/workflows/139-107-ubuntu-gloss-block-41.yml
+++ b/.github/workflows/139-107-ubuntu-gloss-block-41.yml
@@ -2,6 +2,7 @@ name: 139-107 Ubuntu gloss block 41 banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
