--- a/.github/workflows/139-108-ubuntu-dump-block-36.yml
+++ b/.github/workflows/139-108-ubuntu-dump-block-36.yml
@@ -1,8 +1,7 @@
-name: 139-102 Ubuntu gloss block 36 banish
+name: 139-108 Ubuntu Dump block 36 and run banish
 
 on:
   pull_request:
-    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -12,8 +11,8 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-gloss-block-36:
-    name: 139-102 Ubuntu gloss block 36 banish
+  ubuntu-dump-block-36:
+    name: 139-108 Ubuntu Dump block 36 and run banish
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
@@ -35,7 +34,7 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Source gloss block 36 and run banish
+      - name: Dump block 36 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -49,14 +48,67 @@ jobs:
             printf '%s\n'               'BEGIN { idx=0; out="" }'               '/^# First-word gloss/ {'               '  idx++'               '  out=sprintf("%s/block-%03d.sh", outdir, idx)'               '  print "# block " idx > out'               '}'               '{ if (out != "") print >> out }'               'END { printf "%d\n", idx > outdir "/count" }'               > "$gloss_dir/split.awk"
             awk -v outdir="$gloss_dir" -f "$gloss_dir/split.awk" "$gloss_file"
 
-            block="$gloss_dir/block-$(printf "%03d" "36").sh"
-            if [ ! -s "$block" ]; then
+            block_35="$gloss_dir/block-$(printf "%03d" "35").sh"
+            block_36="$gloss_dir/block-$(printf "%03d" "36").sh"
+            block_37="$gloss_dir/block-$(printf "%03d" "37").sh"
+
+            if [ ! -s "$block_36" ]; then
               printf "%s\n" "[gloss-test] missing block 36"
               exit 1
             fi
-            printf "%s\n" "[gloss-test] sourcing block 36"
-            . "$block"
-            banish 8 --only --no-tests --no-heal
+
+            case "dump_then_banish" in
+              dump_then_banish)
+                printf '%s\n' "[gloss-test] block 36 contents:";
+                sed -n '1,200p' "$block_36";
+                . "$block_36";
+                banish 8 --only --no-tests --no-heal;
+                ;;
+              source_only)
+                . "$block_36";
+                printf '%s\n' "[gloss-test] sourced block 36 only";
+                ;;
+              banish_twice)
+                . "$block_36";
+                banish 8 --only --no-tests --no-heal;
+                banish 8 --only --no-tests --no-heal;
+                ;;
+              banish_before_after)
+                banish 8 --only --no-tests --no-heal;
+                . "$block_36";
+                banish 8 --only --no-tests --no-heal;
+                ;;
+              type_check)
+                . "$block_36";
+                gloss_name=$(awk '/^# First-word gloss for commands starting with /{print $NF}' "$block_36" | sed "s/'//g");
+                if [ -n "$gloss_name" ]; then
+                  type "$gloss_name" 2>/dev/null || true;
+                fi;
+                banish 8 --only --no-tests --no-heal;
+                ;;
+              blocks_35_36)
+                if [ ! -s "$block_35" ]; then
+                  printf "%s\n" "[gloss-test] missing block 35";
+                  exit 1;
+                fi;
+                . "$block_35";
+                . "$block_36";
+                banish 8 --only --no-tests --no-heal;
+                ;;
+              blocks_36_37)
+                if [ ! -s "$block_37" ]; then
+                  printf "%s\n" "[gloss-test] missing block 37";
+                  exit 1;
+                fi;
+                . "$block_36";
+                . "$block_37";
+                banish 8 --only --no-tests --no-heal;
+                ;;
+              subshell)
+                ( . "$block_36" );
+                banish 8 --only --no-tests --no-heal;
+                ;;
+            esac
           )
           status=$?
           if [ "$status" -eq 139 ]; then
