--- a/.github/workflows/139-74-ubuntu-gloss-bucket-1.yml
+++ b/.github/workflows/139-74-ubuntu-gloss-bucket-1.yml
@@ -2,6 +2,7 @@ name: 139-74 Ubuntu gloss bucket 1 per-gloss banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
