--- a/.github/workflows/139-75-ubuntu-gloss-bucket-2.yml
+++ b/.github/workflows/139-75-ubuntu-gloss-bucket-2.yml
@@ -2,6 +2,7 @@ name: 139-75 Ubuntu gloss bucket 2 per-gloss banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
