--- a/.github/workflows/139-79-ubuntu-gloss-bucket-6.yml
+++ b/.github/workflows/139-79-ubuntu-gloss-bucket-6.yml
@@ -2,6 +2,7 @@ name: 139-79 Ubuntu gloss bucket 6 per-gloss banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
