--- a/.github/workflows/139-83-ubuntu-gloss-bucket-10.yml
+++ b/.github/workflows/139-83-ubuntu-gloss-bucket-10.yml
@@ -2,6 +2,7 @@ name: 139-83 Ubuntu gloss bucket 10 per-gloss banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
