--- a/.github/workflows/139-86-ubuntu-gloss-bucket-13.yml
+++ b/.github/workflows/139-86-ubuntu-gloss-bucket-13.yml
@@ -2,6 +2,7 @@ name: 139-86 Ubuntu gloss bucket 13 per-gloss banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
