--- a/.github/workflows/139-87-ubuntu-gloss-bucket-14.yml
+++ b/.github/workflows/139-87-ubuntu-gloss-bucket-14.yml
@@ -2,6 +2,7 @@ name: 139-87 Ubuntu gloss bucket 14 per-gloss banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
