--- a/.github/workflows/139-89-ubuntu-gloss-bucket-16.yml
+++ b/.github/workflows/139-89-ubuntu-gloss-bucket-16.yml
@@ -2,6 +2,7 @@ name: 139-89 Ubuntu gloss bucket 16 per-gloss banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
