--- a/.github/workflows/139-96-ubuntu-gloss-bucket-23.yml
+++ b/.github/workflows/139-96-ubuntu-gloss-bucket-23.yml
@@ -2,6 +2,7 @@ name: 139-96 Ubuntu gloss bucket 23 per-gloss banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
