--- a/.github/workflows/139-97-ubuntu-gloss-bucket-24.yml
+++ b/.github/workflows/139-97-ubuntu-gloss-bucket-24.yml
@@ -2,6 +2,7 @@ name: 139-97 Ubuntu gloss bucket 24 per-gloss banish
 
 on:
   pull_request:
+    if: ${{ false }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
